<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AppEngine Dashboard</string>
    <string name="refresh">Refresh</string>
    <string name="feedback">Send Feedback</string>
    <string name="help">Help</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="applications">Applications</string>
    <string name="requests_seconds">Requests / Second</string>
    <string name="load_chart">Load Chart</string>
    <string name="load_30_mins">30 minutes</string>
    <string name="load_3_hrs">3 hours</string>
    <string name="load_6_hrs">6 hours</string>
    <string name="load_12_hrs">12 hours</string>
    <string name="load_24_hrs">24 hours</string>
    <string name="load_2_days">2 days</string>
    <string name="load_4_days">4 days</string>
    <string name="load_7_days">7 days</string>
    <string name="load_14_days">14 days</string>
    <string name="load_30_days">30 days</string>
    <string name="load_charts">Load Charts</string>
    <string name="enter_your_account">Enter your AppEngine Account</string>
    <string name="fill_account_hint">Email</string>
    <string name="login">Log In</string>
    <string name="logo">Logo</string>
    <string name="about">About</string>
    <string name="mail_feedback_address">contact@friedran.org</string>
    <string name="mail_feedback_subject">Feedback on your app</string>
    <string name="mail_feedback_message">Hi,
        \n\nYour Feedback sample app rocks! I would like to give you some feedback:\n</string>
    <string name="title_send_feedback">Send feedback</string>
    <string name="logout">Logout</string>
    <string name="add_existing_account">Add an existing Google Account</string>
</resources>
