<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView
              android:src="@drawable/appengine_logo"
              android:layout_width="match_parent"
              android:layout_height="0px"
              android:layout_weight="1"
              android:layout_gravity="center"
              android:padding="50dp"
              android:contentDescription="@string/logo"
            />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="wrap_content"
                  android:layout_height="0px"
                  android:layout_weight="1"
                  android:layout_gravity="center_horizontal"
                  android:paddingLeft="20dp"
                  android:paddingRight="20dp">

        <TextView android:id="@+id/login_enter_account_label"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:textColor="@color/blue"
                  android:textSize="24dp"
                  android:text="@string/enter_your_account"/>

        <AutoCompleteTextView android:id="@+id/login_account_text_view"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:layout_gravity="center_horizontal"
                              android:paddingTop="10dp"
                              android:hint="@string/fill_account_hint"
                              android:textAppearance="@android:style/TextAppearance.Medium"/>

        <Button android:id="@+id/login_button"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  style="@style/btnStyleGenoa"
                  android:text="@string/login"/>

    </LinearLayout>

</LinearLayout>